# madlib-cli

./: .gitignore  README.md  pyproject.toml
madlib_cli/: madlib.py
templates/: madlib.txt
tests/: test_madlib.py
